@@ -12,9 +12,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <antlr4.visitor>true</antlr4.visitor>
         <antlr4.listener>true</antlr4.listener>
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -27,49 +32,23 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.graphstream</groupId>-->
-<!--            <artifactId>gs-core</artifactId>-->
-<!--            <version>1.3</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.graphstream</groupId>-->
-<!--            <artifactId>gs-ui</artifactId>-->
-<!--            <version>1.3</version>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>com.github.graphstream</groupId>
-            <artifactId>gs-core</artifactId>
-            <version>2.0.0-beta</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.graphstream</groupId>
-            <artifactId>gs-ui-swing</artifactId>
-            <version>2.0-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.graphstream</groupId>
-            <artifactId>gs-ui-javafx</artifactId>
-            <version>2.0-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>13</version>
-<!--            <type>pom</type>-->
-        </dependency>
         <dependency>
             <groupId>guru.nidi</groupId>
             <artifactId>graphviz-java</artifactId>
             <version>0.15.1</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.linkedin.dexmaker</groupId>-->
+<!--            <artifactId>dexmaker</artifactId>-->
+<!--            <version>2.25.1</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
     <build>
         <plugins>
             <plugin>
@@ -84,6 +63,18 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>14</source>
+                    <target>14</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
